--- a/css/appcsm.css
+++ b/css/appcsm.css
@@ -62,3 +62,12 @@ td:nth-child(10){
 #textInputWra .btn{
 
 }
+.btnWra{
+	width: 100px;
+	text-align: center;
+	color: red;
+}
+.btnWra:hover{
+	background-color: #ccc;
+	cursor: pointer;
+}
